build html+scss template

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
+$header_links_font: 14px;
 .container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f0f0f0;
 }
