[ADD] styles and html layout

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,3 +1,41 @@
 <div class="main">
-    <p>main-page works!</p>
+    <div class="main_container">
+        <div class="tags">
+            <p class="tag">gta5</p>
+        </div>
+        <div class="title">
+            <h1>Movie RolePlay</h1>
+            <h2>Ваш реальный ролевой сервер</h2>
+        </div>
+        <div class="description">
+            Movie RolePlay - это высокотехнологичный ролевой сервер, созданный для вас и вашей команды.
+        </div>
+        <div class="main_buttons">
+            <a class="to_play main_btn" rel="leanModal" href="/">Начать играть!</a>
+            <a class="software main_btn" rel="leanModal" href="/">Полезное ПО</a>
+        </div>
+        <div class="server_list">
+            <div class="server_item">
+                <div class="server_item_title">
+                    <h3>Сервер Alpha</h3>
+                </div>
+                <div class="item_body">
+                    <div class="server_icon">
+                        <img src="img/server-icon.png" alt="">
+                    </div>
+                    <div class="host">
+                        <a href="#">alpha.movie-roleplay.ru</a>
+                    </div>
+                    <div class="server_info">
+                        <div class="server_players">
+                            968/1000
+                        </div>
+                    </div>
+                    <div class="loader_line">
+                        <div class="loader"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
