[ADD] style in main-page

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,14 +1,15 @@
 <div class="main">
     <div class="main_container">
         <div class="tags">
-            <p class="tag">gta5</p>
+            <p class="tag">GTA5</p>
+            <p class="tag green">ALT:V</p>
+
         </div>
         <div class="title">
             <h1>Movie RolePlay</h1>
-            <h2>Ваш реальный ролевой сервер</h2>
         </div>
         <div class="description">
-            Movie RolePlay - это высокотехнологичный ролевой сервер, созданный для вас и вашей команды.
+            Высокотехнологичный ролевой сервер, созданный для вас и вашей команды.
         </div>
         <div class="main_buttons">
             <a class="to_play main_btn" rel="leanModal" href="/">Начать играть!</a>
